server/c/output.txt
test.c: In function 'main':
test.c:2:14: error: implicit declaration of function 'print'; did you mean 'printf'? [-Wimplicit-function-declaration]
    2 | int main() { print("test"); }
      |              ^~~~~
      |              printf
